--- a/public/index.html
+++ b/public/index.html
@@ -1,36 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script defer src="./socket.io/socket.io.js"></script>
-  <script defer src="./js/socket-client.js"></script>
-  <title>Websocket</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Programa de Colas</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 </head>
-<body>
-  <h1>Websocket</h1>
 
-  <section>
-    <span >
-      Server status: 
-      <b id='lbl-status'>
-        Offline
-      </b>
-    </span>
-  </section>
+<body class="container">
+    <h1 class="mt-5">Programa de Colas</h1>
 
-  <section>
-    <form id="form-server">
-      <div>
-        <input name='msg' type="text">
-      </div>
-      <div>
-        <button>
-          Enviar
-        </button>
-      </div>
-    </form>
-  </section>
+    <div class="row">
+        <div class="col-6">
+
+            <a class="btn btn-primary" href="publico.html">Pantalla publica</a>
+            <a class="btn btn-secondary" href="nuevo-ticket.html">Crear Tickets</a>
+
+        </div>
+
+        <div class="col-6">
+            <form action="escritorio.html">
+
+                <input name="escritorio" 
+                       type="text" 
+                       class="form-control" 
+                       placeholder="Escritorio" 
+                       autofocus 
+                       required>
+
+                <br>
+                <button type="submit" class="btn btn-primary">
+                    Ingresar
+                </button>
+            </form>
+        </div>
+    </div>
+
 </body>
+
 </html>
