--- a/public/nuevo-ticket.html
+++ b/public/nuevo-ticket.html
@@ -9,10 +9,11 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
+    <script defer src="./socket.io/socket.io.js"></script>
+    <script defer src="./js/nuevo-ticket.js"></script>
 </head>
 
 <body>
-
     <table>
         <tr>
             <td>
@@ -29,10 +30,6 @@
             </td>
         </tr>
     </table>
-
-
-    <script src="./js/nuevo-ticket.js"></script>
-
 </body>
 
 </html>
