--- a/public/escritorio.html
+++ b/public/escritorio.html
@@ -8,6 +8,8 @@
     <title>Programa de Colas</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <script defer src="./socket.io/socket.io.js"></script>
+    <script defer src="./js/escritorio.js"></script>
 </head>
 
 <body class="container">
@@ -21,7 +23,6 @@
                 Atender siguiente ticket
             </button>
         </div>
-
         <div class="col-4 text-center">
             <h4>En cola</h4>
             
@@ -32,9 +33,6 @@
             <h1 id="lblPendientes">10</h1>
         </div>
     </div>
-
-    <script src="./js/escritorio.js"></script>
-
 </body>
 
 </html>
