--- a/public/publico.html
+++ b/public/publico.html
@@ -9,7 +9,8 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
-
+    <script defer src="./socket.io/socket.io.js"></script>
+    <script defer src="./js/publico.js"></script>
 </head>
 
 <body>
@@ -48,9 +49,6 @@
             </td>
         </tr>
     </table>
-
-
-    <script src="./js/publico.js"></script>
 
 </body>
 
